# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

2007-05-31  Piotr Ożarowski
	* IMDB, IMDB-de and KinoDe movie plugins updated (thanks to Michael Jahn)
	* Resizable columns in add movie window's languages tab (thanks to Michael Jahn)
	* Increase runtime maximum value (thanks to Michael Jahn)

2007-05-22  Piotr Ożarowski
	* Minor fix in dbupgrade.py

2007-05-19  Vasco Nunes
	* French translation updated (thanks to Guillaume Pratte)
	* IMDB plugin rating fix (thanks to babelfish)
	* PTGate movie plugin encoding fixed
	* E-pipoca movie plugin updated

2007-05-11  Jessica K. Parth
	* OFDb updated

2007-05-01  Vasco Nunes
	* E-Pipoca movie plugin updated (thanks to Djohnson "Joe" Lima)

2007-04-15  Piotr Ożarowski
	* IMDB movie plugin updated to version 1.3 (director, rating)
	* Fetch from Amazon function fixed ("No image available" image issue)

2007-04-11  Piotr Ożarowski
	* Fixed medium_id and vcodec_id column type in movies table

2007-04-01  Piotr Ożarowski
	* Added Dutch translation (thanks to Marcel Dijkstra)

2007-03-29  Piotr Ożarowski
	* IMDB movie plugin updated
	* IMDb-de movie plugin added (thanks to Michael Jahn)

2007-03-20  Piotr Ożarowski
	* FilmDb and Zelluloid movie plugins added (thanks to Michael Jahn)

2007-03-11  Piotr Ożarowski
	* Filmweb movie plugin updated (no more hangs if no movie info found - closes #10601)
	* Version changed to 0.9.2+svn
	* New configuration file format (human readable) - please delete old one manually

---- 0.9.2 ---

2007-02-20  Piotr Ożarowski
	* IMDB movie plugin updated
	* New seen/unseen icons (thanks to dragonskulle)
	* About window updated

2007-02-19  Piotr Ożarowski
	* CSFD movie plugin updated (still needs work)
	* DVDEmpire movie plugin added (thanks to Michael Jahn)

2007-02-14  Piotr Ożarowski
	* KinoDe and FilmeVonAZ movie plugins updated (thanks to Michael Jahn)

---- 0.9.1 ---

2007-02-13  Piotr Ożarowski
	* KinoDe movie plugin updated (thanks to Michael Jahn)
